@@ -21,6 +21,8 @@ Capitalize on low hanging fruit to identify a ballpark value added activity to b
 
 func main() {
 	app := cview.NewApplication()
+	defer app.HandlePanic()
+
 	app.EnableMouse(true)
 
 	textView := cview.NewTextView()
